# Paper-Clean

./: .gitignore  README.md  pyproject.toml  run_indexing.py  run_query_chroma.py
rag_pipeline/: __init__.py  config.py  embeddings.py
rag_pipeline/cleaners/: __init__.py  paper_cleaner.py
rag_pipeline/loaders/: __init__.py  pdf_loader.py
rag_pipeline/parsers/: __init__.py  paper_parser.py
rag_pipeline/schemas/: __init__.py  models.py
rag_pipeline/scripts/: __init__.py  ingest_papers.py  query_chroma.py
rag_pipeline/transformers/: __init__.py  chunk_builder.py
rag_pipeline/utils/: __init__.py  io.py
rag_pipeline/vectorstores/: __init__.py  chroma_store.py
rag_pipeline/workflows/: __init__.py  index_graph.py
